--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="data-address" content="627 EAST CALAVERAS BLVD #1025,
 MILPITAS, CA 95035"><meta name="data-map" content="627+EAST+CALAVERAS+BLVD+#1025,+MILPITAS,+CA+95035">
   <meta name="description" content="Dedicated to community services, education, and direct relief, HELIXED collaborates with neighbors and partners to deliver practical help and long-term impact.">
+<meta name="facebook-domain-verification" content="zfef166j4ep6svnzzopxjbmcdc2ml7" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
